--- a/addon/templates/components/fa-stack.hbs
+++ b/addon/templates/components/fa-stack.hbs
@@ -1,4 +1,4 @@
 {{yield (hash
-  fa-icon-1x=(component "fa-icon" stack="1")
-  fa-icon-2x=(component "fa-icon" stack="2")
+  stack-1x=(component "fa-icon" stack="1")
+  stack-2x=(component "fa-icon" stack="2")
 )}}
