--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2 id="title">ember-cli-font-awesome</h2>
+      <h2 id="title">ember-font-awesome</h2>
     </div>
   </div>
   {{outlet}}
