--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -8,9 +8,10 @@
       <li>{{fa-icon icon='align-left' fixedWidth=true}} <span class="name">align-left</span></li>
       <li>{{fa-icon icon='align-right' fixedWidth=true}} <span class="name">align-right</span></li>
       <li>{{fa-icon icon='ambulance' fixedWidth=true}} <span class="name">ambulance</span></li>
-      <li>{{fa-icon icon='anchor' fixedWidth=true}} <span class="name">anchor</span></li>
-      <li>{{fa-icon icon='android' fixedWidth=true}} <span class="name">android</span></li>
-      <li>{{fa-icon icon='angellist' fixedWidth=true}} <span class="name">angellist</span></li>
+      <li>{{fa-icon icon='anchor' fixedWidth=true stack="2x"}} <span class="name">anchor</span></li>
+      <li>{{fa-icon icon='android' fixedWidth=true title="Android!!!"}} <span class="name">android</span></li>
+      <li>{{fa-icon icon='angellist' fixedWidth=true color="red"}} <span class="name">angellist</span></li>
+      {{!--
       <li>{{fa-icon icon='angle-double-down' fixedWidth=true}} <span class="name">angle-double-down</span></li>
       <li>{{fa-icon icon='angle-double-left' fixedWidth=true}} <span class="name">angle-double-left</span></li>
       <li>{{fa-icon icon='angle-double-right' fixedWidth=true}} <span class="name">angle-double-right</span></li>
@@ -593,7 +594,7 @@
       <li>{{fa-icon icon='yen' fixedWidth=true}} <span class="name">yen</span></li>
       <li>{{fa-icon icon='youtube' fixedWidth=true}} <span class="name">youtube</span></li>
       <li>{{fa-icon icon='youtube-play' fixedWidth=true}} <span class="name">youtube-play</span></li>
-      <li>{{fa-icon icon='youtube-square' fixedWidth=true}} <span class="name">youtube-square</span></li>
+      <li>{{fa-icon icon='youtube-square' fixedWidth=true}} <span class="name">youtube-square</span></li> --}}
     </ul>
   </div>
 </div>
