--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="plain">
-      <li>{{fa-icon icon=iconName fixedWidth=true}} <span class="name">adjust</span></li>
+      <li>{{fa-icon icon="credit-card" pull=direction}} <span class="name">adjust</span></li>
+      {{!--
       <li>{{fa-icon icon='adn' fixedWidth=true}} <span class="name">adn</span></li>
       <li>{{fa-icon icon='align-center' fixedWidth=true}} <span class="name">align-center</span></li>
       <li>{{fa-icon icon='align-justify' fixedWidth=true}} <span class="name">align-justify</span></li>
@@ -11,7 +12,6 @@
       <li>{{fa-icon icon='anchor' fixedWidth=true stack="2x"}} <span class="name">anchor</span></li>
       <li>{{fa-icon icon='android' fixedWidth=true title="Android!!!"}} <span class="name">android</span></li>
       <li>{{fa-icon icon='angellist' fixedWidth=true color="red"}} <span class="name">angellist</span></li>
-      {{!--
       <li>{{fa-icon icon='angle-double-down' fixedWidth=true}} <span class="name">angle-double-down</span></li>
       <li>{{fa-icon icon='angle-double-left' fixedWidth=true}} <span class="name">angle-double-left</span></li>
       <li>{{fa-icon icon='angle-double-right' fixedWidth=true}} <span class="name">angle-double-right</span></li>
