It works (but not in rebuilds)

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -4,7 +4,7 @@
       <li>{{fa-icon icon='adjust' fixedWidth=true}} <span class="name">adjust</span></li>
       <li>{{fa-icon icon='adn' fixedWidth=true}} <span class="name">adn</span></li>
       <li>{{fa-icon icon='align-center' fixedWidth=true}} <span class="name">align-center</span></li>
-      <li>{{fa-icon icon='align-justify' fixedWidth=true}} <span class="name">align-justify</span></li>
+      {{!-- <li>{{fa-icon icon='align-justify' fixedWidth=true}} <span class="name">align-justify</span></li>
       <li>{{fa-icon icon='align-left' fixedWidth=true}} <span class="name">align-left</span></li>
       <li>{{fa-icon icon='align-right' fixedWidth=true}} <span class="name">align-right</span></li>
       <li>{{fa-icon icon='ambulance' fixedWidth=true}} <span class="name">ambulance</span></li>
@@ -593,7 +593,7 @@
       <li>{{fa-icon icon='yen' fixedWidth=true}} <span class="name">yen</span></li>
       <li>{{fa-icon icon='youtube' fixedWidth=true}} <span class="name">youtube</span></li>
       <li>{{fa-icon icon='youtube-play' fixedWidth=true}} <span class="name">youtube-play</span></li>
-      <li>{{fa-icon icon='youtube-square' fixedWidth=true}} <span class="name">youtube-square</span></li>
+      <li>{{fa-icon icon='youtube-square' fixedWidth=true}} <span class="name">youtube-square</span></li> --}}
     </ul>
   </div>
 </div>
