--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -4,7 +4,7 @@
       <li>{{fa-icon icon='adjust' fixedWidth=true}} <span class="name">adjust</span></li>
       <li>{{fa-icon icon='adn' fixedWidth=true}} <span class="name">adn</span></li>
       <li>{{fa-icon icon='align-center' fixedWidth=true}} <span class="name">align-center</span></li>
-      {{!-- <li>{{fa-icon icon='align-justify' fixedWidth=true}} <span class="name">align-justify</span></li>
+      <li>{{fa-icon icon='align-justify' fixedWidth=true}} <span class="name">align-justify</span></li>
       <li>{{fa-icon icon='align-left' fixedWidth=true}} <span class="name">align-left</span></li>
       <li>{{fa-icon icon='align-right' fixedWidth=true}} <span class="name">align-right</span></li>
       <li>{{fa-icon icon='ambulance' fixedWidth=true}} <span class="name">ambulance</span></li>
@@ -13,6 +13,7 @@
       <li>{{fa-icon icon='angellist' fixedWidth=true}} <span class="name">angellist</span></li>
       <li>{{fa-icon icon='angle-double-down' fixedWidth=true}} <span class="name">angle-double-down</span></li>
       <li>{{fa-icon icon='angle-double-left' fixedWidth=true}} <span class="name">angle-double-left</span></li>
+      {{!--
       <li>{{fa-icon icon='angle-double-right' fixedWidth=true}} <span class="name">angle-double-right</span></li>
       <li>{{fa-icon icon='angle-double-up' fixedWidth=true}} <span class="name">angle-double-up</span></li>
       <li>{{fa-icon icon='angle-down' fixedWidth=true}} <span class="name">angle-down</span></li>
