--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="plain">
-      <li>{{fa-icon icon='adjust' fixedWidth=true}} <span class="name">adjust</span></li>
+      <li>{{fa-icon icon='adjust' fixedWidth=true ariaHidden=false}} <span class="name">adjust</span></li>
       {{!--
       <li>{{fa-icon icon='adn' fixedWidth=true}} <span class="name">adn</span></li>
       <li>{{fa-icon icon='align-center' fixedWidth=true}} <span class="name">align-center</span></li>
